# GPU4GST_code

./: .gitignore  CMakeLists.txt  CMakeLists_online.txt  README.md  simple_iterative_tests.text
CLB/: CMakeLists.txt
CLB/GPU/: graph_v_of_v_idealID_DPBF_only_ec.cu  try.cpp
CLB/include/: graph_hash_of_mixed_weighted_read_for_GSTP.hpp  graph_v_of_v_idealID_DPBF_only_ec.cuh  graph_v_of_v_idealID_PrunedDPPlusPlus.hpp  test.cuh  test.hpp
CLB/include/graph_hash_of_mixed_weighted/: graph_hash_of_mixed_weighted_extract_subgraph_for_a_hash_of_vertices.hpp
CPU_code/: graph_v_of_v_idealID_DPBF_only_ec.h  try.cpp
rucgraph/: DP.cuh  DPQ.cuh  README.md  graph_hash_of_mixed_weighted_MST_postprocessing.h  graph_hash_of_mixed_weighted_extract_subgraph_for_a_hash_of_vertices.h  graph_hash_of_mixed_weighted_generate_random_groups_of_vertices.h  graph_hash_of_mixed_weighted_minimum_spanning_tree.h  graph_hash_of_mixed_weighted_read_for_GSTP.h  graph_hash_of_mixed_weighted_save_for_GSTP.h  graph_hash_of_mixed_weighted_sum_of_nw_ec.h  graph_v_of_v_idealID_DPBF_only_ec.h  graph_v_of_v_idealID_PrunedDPPlusPlus.h  graph_v_of_v_idealID_save_for_GSTP.h  test_gpu.h
rucgraph/graph_hash_of_mixed_weighted/: graph_hash_of_mixed_weighted.h  graph_hash_of_mixed_weighted_binary_operations.h
rucgraph/graph_hash_of_mixed_weighted/random_graph/: graph_hash_of_mixed_weighted_generate_random_graph_for_Cytoscape.cpp
rucgraph/graph_hash_of_mixed_weighted/two_graphs_operations/: graph_hash_of_mixed_weighted_to_graph_v_of_v.h  graph_hash_of_mixed_weighted_to_graph_v_of_v_idealID.h
rucgraph/graph_v_of_v_idealID/: csr_graph.hpp  graph_v_of_v_idealID.h  graph_v_of_v_idealID_to_graph_hash_of_mixed_weighted.h
rucgraph/graph_v_of_v_idealID/common_algorithms/: graph_v_of_v_idealID_shortest_paths.h
rucgraph/text_mining/: parse_string.h  print_items.h
sht/: graph_hash_of_mixed_weighted_MST_postprocessing.h  graph_hash_of_mixed_weighted_generate_random_groups_of_vertices.h  graph_v_of_v_idealID_PrunedDPPlusPlus.h  test.h
src/: DP.cu  DPQ.cu  DPforoneGPU  DPmultiGPUunifedmemory  malloc  try_gpu.cpp
